Fix home scrollbar issues

--- a/src/renderer/scss/_home.scss
+++ b/src/renderer/scss/_home.scss
@@ -1,5 +1,6 @@
 .home {
     padding: 4rem;
+    height: 100vh;
 
     .branding-row {
         .branding {
