--- a/src/renderer/scss/_window.scss
+++ b/src/renderer/scss/_window.scss
@@ -23,6 +23,8 @@ body {
 
     .titlebar {
         @apply .absolute .pin-t .pin-l .pin-r .h-10;
+
+        z-index: 1;
     }
 
     .content {
